--- a/04-playbook.yml
+++ b/04-playbook.yml
@@ -7,6 +7,10 @@
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
+    - name: Configurar credenciales de AWS
+      set_fact:
+        aws_profile: my_profile
+        aws_credentials_file: .aws/credentials
     - name: Get EC2 Instance ID
       ec2_instance_info:
         region: "{{ region }}"
